Small fixes to MTEX library