@@ -16,7 +16,7 @@
     <property name="myself" value="myself"/>
     <property name="bundle.icon" value="maud.icns"/>
     <property name="icon" value="src/images/${bundle.icon}"/>
-    <property name="maud_version" value="2.9993"/>
+    <property name="maud_version" value="2.9994"/>
     <property name="application_OSX.title" value="Maud.app"/>
     <property name="app_osx_295" location="${user.home}/Projects/maud/osx_295"/>
     <property name="app_osx_arm" location="${user.home}/Projects/maud/osx_arm"/>
@@ -25,7 +25,7 @@
     <property name="java_openjdk" location="${openjdk}"/>
     <property name="java_openjdk_arm" location="${openjdk_arm}"/>
     <property name="fpsm_build" location="${fpsmBuild}"/>
-    <property name="javac_options" value="--enable-preview --source=19"/>
+    <property name="javac_options" value="--source=19"/>
 
     <target name="clean" description="Delete the build files.">
         <delete dir="${build_ant}"/>
@@ -57,7 +57,7 @@
             <src path="${src}"/>
             <!--exclude name="it/unitn/ing/jsginfo/**" /-->
             <!--exclude name="it/unitn/ing/jgraph/**" /-->
-            <!--exclude name="com/radiographema/fpsm/**"/-->
+            <exclude name="com/radiographema/fpsm/**"/>
             <exclude name="it/unitn/ing/esqui/client/**"/>
             <exclude name="it/unitn/ing/esqui/server/**"/>
             <exclude name="it/unitn/ing/esqui/wizard/MeasurementWizard.java"/>
